--- a/Attacks/WP/config.ini
+++ b/Attacks/WP/config.ini
@@ -1,9 +1,12 @@
 [ATTACKERINFO]
 ip = 192.168.100.5
-port = 13454
+port = 32825
 
 [VICTIMINFO]
 ip = 192.168.100.7
 port = 80
 secure = False
+
+[GENERALINFO]
+exploit = 1
 
